test/FAIL/breakcmd/to_many_arguments/07_test_break.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="to many arguments"
#-------

load boucle.o
break add 0x1004
break del all 0